# the-sean-c.github.io

./: .Rhistory  .gitignore  .nojekyll  .pdm-python  CNAME  README.md  _quarto.yml  about copy.html  about.html  about.qmd  index-listing.json  index.html  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
_freeze/posts/fasthtml_tailwind/index/execute-results/: html.json
_freeze/posts/hidden-markov-model/index/execute-results/: html.json
_freeze/posts/one-armed-bandit/index/execute-results/: html.json
_freeze/posts/post-with-code/index/execute-results/: html.json
_site/: about.html  index.html  search.json
_site/posts/post-with-code/: index.html
code/basic_website/: .sesskey  pyproject.toml  tailwind.config.js
code/basic_website/src/: app.py
code/basic_website/src/css/: main.css
code/basic_website/static/: main.css
posts/ai-interface/: index.html  index.qmd
posts/basis-analysis-synthesis/: index.html
posts/churn/: index.html
posts/fasthtml_tailwind/: index.html  index.qmd
posts/hidden-markov-model/: index.html  index.ipynb  index.qmd
posts/hidden-markov-model/data/: shiller_data.pkl
posts/making-quarto-report-template/: index.html  index.qmd
posts/one-armed-bandit/: .vdoc.py  index.html  index.qmd
posts/post-with-code/: index.qmd
posts/successful-ai-product/: index.html  index.qmd
posts/welcome/: index.html  index.qmd
utilities/: plot_template.py  print_polars.py
