[tool.poetry]
name = "the-sean-c-github-io"
version = "0.1.0"
description = "Github Pages Website"
authors = ["Sean Daly"]
readme = "README.md"
packages = [{include = "the_sean_c"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
polars = "^0.18.15"
plotly = "^5.16.1"
pandas = "^2.0.3"
jupyter = "^1.0.0"
jupyterlab = "^4.0.5"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
