[tool.poetry]
name = "the-sean-c-github-io"
version = "0.1.0"
description = "Github Pages Website"
authors = ["Sean Daly"]
readme = "README.md"
packages = [{include = "the_sean_c"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.2"
polars = "^0.18.15"
plotly = "^5.16.1"
pandas = "^2.0.3"
jupyter = "^1.0.0"
jupyterlab = "^4.0.5"
tabulate = "^0.9.0"
markdown = "^3.4.4"
pyarrow = "^13.0.0"
matplotlib = "^3.7.3"
seaborn = "^0.12.2"
scipy = "^1.11.3"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "jupyter<2.0.0,>=1.0.0",
]

[tool.pdm.build]
includes = ["the_sean_c"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "the-sean-c-github-io"
version = "0.1.0"
description = "Github Pages Website"
authors = [
    {name = "Sean Daly", email = "the_sean_c@fastmail.com"},
    {name = "Sean Daly"},
]
dependencies = [
    "numpy<2.0.0,>=1.25.2",
    "polars<1.0.0,>=0.18.15",
    "plotly<6.0.0,>=5.16.1",
    "pandas<3.0.0,>=2.0.3",
    "jupyter<2.0.0,>=1.0.0",
    "jupyterlab<5.0.0,>=4.0.5",
    "tabulate<1.0.0,>=0.9.0",
    "markdown<4.0.0,>=3.4.4",
    "pyarrow<14.0.0,>=13.0.0",
    "matplotlib<4.0.0,>=3.7.3",
    "seaborn<1.0.0,>=0.12.2",
    "scipy<2.0.0,>=1.11.3",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

